[tool.poetry]
name = "zappit"
version = "0.1.0"
description = ""
authors = ["alpden550 <alpden550@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1"
python-dotenv = "^0.14.0"
djangorestframework = "^3.11.1"
psycopg2-binary = "^2.8.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.3"
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
